# PadProxy

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: firmware-release.yml  firmware-tests.yml
docs/: README.md  device-setup-design.md  pcb-v2-design.md  power-management-design.md  wifi-ir-smarthome-design.md
firmware/: .gitignore  CMakeLists.txt  Makefile  README.md  partition_table.json  pico_sdk_import.cmake  platformio.ini  sdkconfig.defaults
firmware/include/: bt_gamepad.h  bt_gamepad_convert.h  device_config.h  gamepad.h  ir_blaster.h  ir_protocol.h  ota_update.h  ota_version.h  pc_power_hal.h  pc_power_state.h  setup_cmd.h  smarthome.h  usb_hid_gamepad.h  usb_hid_report.h  wifi_service.h
firmware/src/: bt_gamepad.c  bt_gamepad_convert.c  btstack_config.h  device_config.c  ir_blaster.c  ir_protocol.c  lwipopts.h  main.c  mbedtls_config.h  ota_update.c  ota_version.c  pc_power_hal.c  pc_power_state.c  sdkconfig.h  setup_cmd.c  smarthome.c  smarthome_hass.c  tusb_config.h  usb_hid_gamepad.c  usb_hid_report.c  wifi_service.c
firmware/test/test_bt_gamepad_convert/: test_bt_gamepad_convert.c
firmware/test/test_device_config/: test_device_config.c
firmware/test/test_device_integration/: test_device_integration.c
firmware/test/test_gamepad/: test_gamepad.c
firmware/test/test_ir_protocol/: test_ir_protocol.c
firmware/test/test_ota_version/: test_ota_version.c
firmware/test/test_pc_power_state/: test_pc_power_state.c
firmware/test/test_setup_cmd/: test_setup_cmd.c
marketing/: README.md  launch-checklist.md  launch-posts.md  strategy.md  tindie-listing.md
pcb/: PadProxy.kicad_pcb  PadProxy.kicad_pro  PadProxy.kicad_sch  README.md
